--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,17 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# config.yaml
+model_training/config.yaml
+model_training/config.best.yaml
+
+# gdrive assets
+model_training/weights
+model_training/dataset
+
+# outputs
+runs
+*.onnx
+*.pt
+
